# log_service

./: .gitignore  log_microservice.sln
.github/workflows/: ci.yml
log_microservice/: APIGateway.cpp  APIGateway.h  APIGateway.ixx  CMakeLists.txt  Dockerfile.gateway  HTTPServer.cpp  HTTPServer.h  Logger.cpp  Logger.h  Logger.ixx  SqlCommander.cpp  SqlCommander.h  SqlCommander.ixx  Tests.cpp  config.env  docker-compose.yml  log_microservice.cpp  log_microservice.vcxproj  log_microservice.vcxproj.filters
